invalid_bool_test/invalid_bool_test_7.src
.IPPcode24
PUSHFRAME string@henlo